--- a/ControlInventario/ControlInventario.csproj
+++ b/ControlInventario/ControlInventario.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SQLitePCLRaw.core" Version="2.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClasesInventario\ClasesInventario.csproj" />
   </ItemGroup>
 
